# cloud-complete

./: .dockerignore  .gitignore  .prettierrc.json  docker-compose.yaml  package.json
.githooks/: pre-commit
docker/: node.Dockerfile  rust.Dockerfile
services/back/: Dockerfile  package.json
services/back/src/: app.controller.ts  app.module.ts  main.ts
services/back/src/config/: index.ts
services/back/src/services/order/: order.controller.ts  order.module.ts  order.service.ts
services/back/src/services/ticket/: ticket.controller.ts  ticket.module.ts  ticket.service.spec.ts  ticket.service.ts
services/back/src/types/: index.ts
services/data/: .rustfmt.toml  Cargo.toml  package.json
services/data/src/: main.rs
services/data/src/lib/: errors.rs  mod.rs
services/data/src/lib/db/: mod.rs  order.rs  ticket.rs
services/data/src/lib/mq/: handle_order_requests.rs  handle_ticket_requests.rs  mod.rs  types.rs
