[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
lapin = "1.8"
mongodb = { version = "2.0", features = ["tokio-runtime", "bson-uuid-0_8", "bson-chrono-0_4"] }
